removed fixed nature of navbar -- ad was too annoyingly present/visible

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,8 +1,3 @@
-body {
-  padding-top: 51px;
-}
-
-
 p,
 ol,
 ul,
@@ -377,4 +372,8 @@ blockquote {
 	background-color: #e6f3f7;
 	margin: 1em 0em;
   border-left: 0px;
+}
+
+h3#id-rather-be-writing-newsletter {
+    margin-top: 40px;
 }
