--- a/_sass/headings.scss
+++ b/_sass/headings.scss
@@ -1,6 +1,6 @@
 /* heading styles */
 
-/*make room for the nav bar */
+/*make room for the nav bar*/
 
 h1[id],
 h2[id],
@@ -9,9 +9,10 @@ h4[id],
 h5[id],
 h6[id],
 dt[id] {
-  padding-top:80px;
-  margin-top:-60px;
+  padding-top:10px;
+  margin-top:-8px;
 }
+
 
 h1 {
   margin-bottom: 30px;
