--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -104,6 +104,7 @@ img.navbar-logo {
 .navbar {
   border-bottom: 1px solid #dedede;
   font-size: 16px;
+  margin-bottom: 0px;
 }
 
 @media (min-width: 768px) {
@@ -131,8 +132,9 @@ ul.nav.navbar-nav li a {
 }
 
 .topBannerAd {
-    margin: 5px;
+    margin-top: 5px;
     max-height: 60px;
+    margin-botom: 3px;
 }
 /* end search */
 
